addition to index for link to mission assignment

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
         <header>
             <h1>Stephen Rollins: WDD 131 portfolio</h1>
         </header>
-        <main></main>
+        <main>
+            <nav>
+                <ul>
+                    <li><a href="https://rollin23.github.io/wdd131/mission/mission.html">BYU-I Mission statement</a></li>                 
+                </ul>
+            </nav>
+            <section>
+                <h2>Welcome to my WDD 131 Portfolio</h2>
+                <p>This is my portfolio for WDD 131. Here you will find links to my about me page, contact page, and the BYUI mission statement page.</p>
+            </section>
+        </main>
         <footer></footer>
     </body>
 </html>
