--- a/mission/mission.html
+++ b/mission/mission.html
@@ -12,6 +12,10 @@
     <body>
         <div class="content">
             <header class="title">
+                <select name="theme" id="theme-selector">
+                    <option value="light">Light</option>
+                    <option value="dark">Dark</option>
+                </select>
                 <h1>Mission Statement</h1>
                 <h2>Brigham Young University-Idaho</h2>
                 <hr class="underline">
