changes to cool pics

--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -14,7 +14,7 @@
         <h1>Cool Pics 📷</h1>
         <button class="menu-button">Menu</button>
         <nav>
-            <ul>
+            <ul class="menu hide">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">People</a></li>
                 <li><a href="contact.html">Places</a></li>
@@ -27,28 +27,28 @@
         <h2>Current Work</h2>
         <section class="gallery">
             <figure>
-                <img src="norris-sm.jpeg" alt="picture">
+                <img src="norris-full.jpeg" alt="picture">
             </figure>
             <figure>
-                <img src="norris-sm.jpeg" alt="picture">
+                <img src="norris-full.jpeg" alt="picture">
             </figure>
             <figure>
-                <img src="norris-sm.jpeg" alt="picture">
+                <img src="norris-full.jpeg" alt="picture">
             </figure>
             <figure>
-                <img src="norris-sm.jpeg" alt="picture">
+                <img src="norris-full.jpeg" alt="picture">
             </figure>
             <figure>
-                <img src="norris-sm.jpeg" alt="picture">
+                <img src="norris-full.jpeg" alt="picture">
             </figure>
             <figure>
-                <img src="norris-sm.jpeg" alt="picture">
+                <img src="norris-full.jpeg" alt="picture">
             </figure>
             <figure>
-                <img src="norris-sm.jpeg" alt="picture">
+                <img src="norris-full.jpeg" alt="picture">
             </figure>
             <figure>
-                <img src="norris-sm.jpeg" alt="picture">
+                <img src="norris-full.jpeg" alt="picture">
             </figure>
             <figure>
                 <img src="norris-sm.jpeg" alt="picture">
