--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -56,7 +56,7 @@
         </section>
     </main>
     <footer>
-        <p>©2023 Not a real site 😀</p>
+        <p>©2025 site for class purposes</p>
     </footer>
 </body>
 </html>
