--- a/recipes/index.html
+++ b/recipes/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:url" content="https://yourdomain.com">
     <link rel="stylesheet" href="recipes.css">
     <title>Recipes Book</title>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
     <link rel="icon" href="favicon.ico" type="x-icon">
     <meta name="author" content="Stephen Rollins">
     <meta name="description" content="Recipe Book is a simple, accessible site to discover and share delicious recipes like Apple Crisp.">
