--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -29,8 +29,8 @@
             </div>
             <h1 class="nav-title">Bunjay Curry</h1>    
             <nav class="nav-right">
-                <button onclick="index.html">Home</button>
-                <button onclick="menu.html">Menu</button>
+                <button onclick="https://rollin23.github.io/wdd131/personal-site/index.html">Home</button>
+                <button onclick="https://rollin23.github.io/wdd131/personal-site/menu.html">Menu</button>
             </nav>
         </div>
     </header>
@@ -63,7 +63,7 @@
             <img src="hq720.jpg" alt="Picture of food 2">
         </section>
         <section class="order-now">
-            <a href="menu.html" class="order-btn">Order Now</a>
+            <a href="https://rollin23.github.io/wdd131/personal-site/menu.html" class="order-btn">Order Now</a>
         </section>
     </main>
 
