--- a/personal-site/menu.html
+++ b/personal-site/menu.html
@@ -30,7 +30,7 @@
       </div>
       <h1 class="nav-title">Bunjay Curry</h1>
       <nav class="nav-right">
-        <button onclick="location.href='index.html'">Home</button>
+        <button onclick="location.href='https://rollin23.github.io/wdd131/personal-site/index.html'">Home</button>
         <button onclick="location.href='menu.html'">Menu</button>
       </nav>
     </div>
