--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -29,8 +29,8 @@
             </div>
             <h1 class="nav-title">Bunjay Curry</h1>    
             <nav class="nav-right">
-                <button onclick="https://rollin23.github.io/wdd131/personal-site/index.html">Home</button>
-                <button onclick="https://rollin23.github.io/wdd131/personal-site/menu.html">Menu</button>
+            <button onclick="location.href='https://rollin23.github.io/wdd131/personal-site/index.html'">Home</button>
+            <button onclick="location.href='https://rollin23.github.io/wdd131/personal-site/menu.html'">Menu</button>
             </nav>
         </div>
     </header>
