--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -37,7 +37,7 @@
     
     <main>
         <div class="hero-image">  
-            <img src="opener.jpg" alt="Panoramic view of Bunjay Curry restaurant" class="restaurant-img">
+            <img src="opener (1).webp" alt="Panoramic view of Bunjay Curry restaurant" class="restaurant-img">
         </div>
         <section class="welcome">
             <h1 class="welcome-title">Welcome to Bunjay Curry</h1>
@@ -59,8 +59,8 @@
         </section>
 
         <section class="gallery">
-            <img src="Duck-Curry-Featured-Image.jpg" alt="Picture of food 1">
-            <img src="hq720.jpg" alt="Picture of food 2">
+            <img src="Duck-Curry-Featured-Image.webp" alt="Picture of food 1">
+            <img src="hq720.webp" alt="Picture of food 2">
         </section>
         <section class="order-now">
             <a href="https://rollin23.github.io/wdd131/personal-site/menu.html" class="order-btn">Order Now</a>
