--- a/personal-site/menu.html
+++ b/personal-site/menu.html
@@ -77,7 +77,7 @@
 
       
       <div class="menu-item">
-        <img src="Duck-Curry-Featured-Image.jpg" alt="Duck Curry" />
+        <img src="Duck-Curry-Featured-Image.webp" alt="Duck Curry" />
         <div class="item-info">
           <h3>Duck Curry</h3>
           <p>Our Duck Curry is the best you'll ever have. If you've never had Duck Curry then it'll be your new favorite. It taste even better if you're brave enough to ratchet up the heat.</p>
@@ -118,7 +118,7 @@
       </div>
       
       <div class="menu-item">
-        <img src="hq720.jpg" alt="Caribbean Juice" />
+        <img src="hq720.webp" alt="Caribbean Juice" />
         <div class="item-info">
           <h3>Caribbean Juice</h3>
           <p>Freshly Squeezed Juice from the West Indies. The juice changes each day and is sweet and delicious. Try our signature cane juice.</p>
