--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="nav">
             <div class="nav-left">
-                <img src="logo.png" alt="bunjay Curry Logo" class="logo-img">
+                <img src="logo.webp" alt="bunjay Curry Logo" class="logo-img">
             </div>
             <h1 class="nav-title">Bunjay Curry</h1>    
             <nav class="nav-right">
