--- a/personal-site/menu.html
+++ b/personal-site/menu.html
@@ -26,7 +26,7 @@
   <header>
     <div class="nav">
       <div class="nav-left">
-        <img src="logo.png" alt="Bunjay Curry Logo" class="logo-img" />
+        <img src="logo.webp" alt="Bunjay Curry Logo" class="logo-img" />
       </div>
       <h1 class="nav-title">Bunjay Curry</h1>
       <nav class="nav-right">
