--- a/personal-site/menu.html
+++ b/personal-site/menu.html
@@ -136,6 +136,7 @@
   <footer>
     <div class="footer-content">
       <a href="https://www.flaticon.com/free-icons/recipe" title="recipe icons">Recipe icons created by Freepik - Flaticon</a>
+       <!-- Social media icons provided under CC from https://www.iconfinder.com/AlfredoCreates  -->
       <div class="social">
         <a href="#"><img src="instagram_icon.svg" alt="instagram icon" /></a>
         <a href="#"><img src="youtube_icon.svg" alt="youtube icon" /></a>
