--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -59,7 +59,7 @@
         </section>
 
         <section class="gallery">
-            <img src="Duck-Curry-Featured-Image.webp" alt="Picture of food 1">
+            <img src="Duck-Curry-Featured-Image.jpg" alt="Picture of food 1">
             <img src="hq720.webp" alt="Picture of food 2">
         </section>
         <section class="order-now">
