--- a/personal-site/menu.html
+++ b/personal-site/menu.html
@@ -77,7 +77,7 @@
 
       
       <div class="menu-item">
-        <img src="Duck-Curry-Featured-Image.webp" alt="Duck Curry" />
+        <img src="Duck-Curry-Featured-Image.jpg" alt="Duck Curry" />
         <div class="item-info">
           <h3>Duck Curry</h3>
           <p>Our Duck Curry is the best you'll ever have. If you've never had Duck Curry then it'll be your new favorite. It taste even better if you're brave enough to ratchet up the heat.</p>
