last minute changes

--- a/personal-site/menu.html
+++ b/personal-site/menu.html
@@ -19,7 +19,7 @@
   <meta name="twitter:description" content="Discover bold Caribbean flavors at Bunjay Curry. Authentic curries, warm spices, and dishes that feel like home." />
   <meta name="twitter:image" content="https://yourdomain.com/images/bunjay-curry-preview.jpg" />
   <meta name="twitter:url" content="https://yourdomain.com" />
-  <script src="menu.js" defer></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
