--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <main>
             <nav>
                 <ul>
-                    <li><a href="https://rollin23.github.io/wdd131/mission/mission.html">BYU-I Mission statement</a></li>                 
+                    <li><a href="https://rollin23.github.io/wdd131/mission/mission.html">BYU-I Mission statement</a></li>
+                    <li><a href="https://rollin23.github.io/wdd131/personal-site/index.html">Personal Project</a></li>                 
                 </ul>
             </nav>
             <section>
