--- a/personal-site/menu.html
+++ b/personal-site/menu.html
@@ -49,7 +49,7 @@
         <img src="phalouri.jpg" alt="Pholourie" />
         <div class="item-info">
           <h3>Hot Pholourie</h3>
-          <p>This is a fried Guyanese treat. Soft fried balls of dough covered in sour which is sweet mango sauce with garlic and hot peppery flavors.</p>
+          <p>This is a fried Guyanese treat. Soft fried balls of dough covered in sour. A sweet mango sauce with garlic and hot peppery flavors.</p>
           <p class="price">$6.99</p>
           <button class="add-btn" data-price="6.99">Add to Order</button>
         </div>
